src/test/ui/match/match-unresolved-one-arm.stderr
error[E0282]: type annotations needed
  --> $DIR/match-unresolved-one-arm.rs:5:15
   |
LL |         () => foo()
   |               ^^^ cannot infer type for type parameter `T` declared on the function `foo`
   |
help: consider giving this binding a type
   |
LL |     let x: Type = match () {
   |          ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
